Wed May 19 09:49:23 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/dds/DataReader_T.cpp:
        * connectors/dds4ccm/impl/dds/DataWriter.cpp:
          Fixed mismatched delete

Tue May 18 21:48:11 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * DAnCE/Config_Handlers/Config_Handlers.mpc:
        * DAnCE/Config_Handlers/DynAny_Handler/DynAny_Handler.mpc:
        * DAnCE/Config_Handlers/Package_Handlers/Package_Handlers.mpc:
        * DAnCE/DAnCE/DAnCE_Properties.mpc:
        * DAnCE/Deployment/DAnCE_Core.mpc:
        * DAnCE/DomainApplication/DomainApplication.mpc:
        * DAnCE/DomainApplicationManager/DomainApplicationManager.mpc:
        * DAnCE/ExecutionManager/ExecutionManager.mpc:
        * DAnCE/Logger/Logger.mpc:
        * DAnCE/NodeApplication/NodeApplication.mpc:
        * DAnCE/NodeApplicationManager/NodeApplicationManager.mpc:
        * DAnCE/NodeManager/NodeManager.mpc:
        * DAnCE/Plan_Launcher/Plan_Launcher.mpc:
        * DAnCE/RepositoryManager/RepositoryManager.mpc:
        * DAnCE/TargetManager/TargetManager.mpc:
        * ccm/CCM_lem_stub.mpc:
        * ccm/CCM_stub.mpc:
        * ccm/CCM_svnt.mpc:
        * ccm/ComponentServer/CCM_ComponentServer.mpc:
        * ciao/ComponentServer/CIAO_ComponentServer.mpc:
        * ciao/Containers/CIAO_Servant_Activator.mpc:
        * ciao/Containers/Containers.mpc:
        * ciao/Containers/Session/Session_Container.mpc:
        * ciao/Contexts/Context.mpc:
        * ciao/Logger/Logger.mpc:
        * ciao/Servants/Servants.mpc:
        * ciao/Valuetype_Factories/Factories.mpc:
        * ciao/install_versionh.mpc:
        * connectors/ami4ccm/ami4ccm/ami4ccm.mpc:
        * connectors/dds4ccm/idl/dds4ccm_lem_stub.mpc:
        * connectors/dds4ccm/idl/dds4ccm_skel.mpc:
        * connectors/dds4ccm/idl/dds4ccm_stub.mpc:
        * connectors/dds4ccm/impl/dds/dds4ccm_impl.mpc:
        * connectors/dds4ccm/impl/logger/Logger.mpc: