@@ -42,8 +42,7 @@ public:
 
   void passivate (void);
 
-  void remove (
-    ::DDS::Subscriber_ptr subscriber);
+  void remove (::DDS::Subscriber_ptr subscriber);
 
 protected:
   /**
